fixed overlapping images

--- a/style.css
+++ b/style.css
@@ -168,9 +168,10 @@ a {
   padding:5px;
   padding-bottom: 10px;
   letter-spacing: 2px;
-  display:inline-block;
+  display:flex;
   color: white;
   margin-top:20px;
+  line-height: normal;
 }
 
 .card{
@@ -294,6 +295,8 @@ h4{
   margin-right: 10%;
   padding: 15px;
   border-radius: 25px;
+  margin-bottom: 5%;
+
 }
 
 p {
@@ -386,9 +389,6 @@ p.artist-header{
   
 }
 
-.grid-x{
-  margin-bottom: 5%;
-}
 .img-container{
   text-align: center;
   display: block;
@@ -443,6 +443,19 @@ p.artist-header{
   -webkit-column-count: 1;
   column-count:         1;
   }
+  .li-foot{
+    padding:10px;
+  }
+  
+  .swiper-slide {
+    
+    width:100%;
+    height:300px;
+  }
+  .swiper-container{
+    height:fit-content;
+  }
+
 }
 
 
